src/test/ui/asm/asm-out-no-modifier.stderr
error[E0661]: output operand constraint lacks '=' or '+'
  --> $DIR/asm-out-no-modifier.rs:32:29
   |
LL |         asm!("mov $1, $0" : "r"(x) : "r"(5)); //~ ERROR output operand constraint lacks '='
   |                             ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0661`.
